2007-11-12  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/gnome-cmd-tags.h:
	Added has_tag() function

2007-11-08  Mike Crash <mike@mikecrash.com>

	* src/gnome-cmd-con-device.cc:
	Fix for mounting of devices with spaces in the name (e.g. "/media/NIKON D40")

2007-11-07  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-ftp-dialog.cc:
	Activate/deactivate buttons accordingly to the number of connections

2007-11-06  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-bookmark-dialog.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-file-selector.h:
	* src/gnome-cmd-ftp-dialog.cc:
	* src/gnome-cmd-main-win.cc:
	* src/gnome-cmd-user-actions.cc:
	Set default dir to NULL for gnome_cmd_file_selector_set_connection ()

	* src/gnome-cmd-ftp-dialog.cc:
	Added tooltips to the connection list columns

	* src/gnome-cmd-user-actions.cc:
	* src/utils.cc:
	* src/utils.h:
	Added gnome_cmd_show_message() function

	* src/gnome-cmd-file-props-dialog.cc:
	Added tooltips to the metadata list columns

	* src/gnome-cmd-delete-dialog.cc:
	Fix for memory leak in delete confirm dlg

2007-11-05  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-bookmark-dialog.cc:
	* src/gnome-cmd-ftp-dialog.cc:
	* src/gnome-cmd-options-dialog.cc:
	Use stock buttons in dialogs

2007-11-05  koos  <kjniesink@yahoo.co.uk>

	* src/gnome-cmd-file-selector.cc:
	Proper handling of 'cd ~/mydir'

2007-11-04  Matthias <neolitho@wh12.tu-dresden.de>

	* data/gnome-commander.ebuild:
	Typo fix

2007-11-03  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-ftp-dialog.cc:
	Deep surgery of the FTP dialog

2007-11-01  koos  <kjniesink@yahoo.co.uk>

	* src/gnome-cmd-cmdline.cc:
	'cd -': go to dir '-' if present

2007-10-31  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con.cc:
	* src/gnome-cmd-con.h:
	Added gnome_cmd_con_get_icon_name ()

2007-10-30  Piotr Eljasiak  <epiotr@use.pl>

	* src/libgviewer/image-render.cc: