@@ -3,6 +3,9 @@
 	* src/tags/gnome-cmd-tags.h:
 	Added has_tag() function
 
+	* src/gnome-cmd-file-props-dialog.cc:
+	Present selected metatags in the file property dlg
+
 2007-11-08  Mike Crash <mike@mikecrash.com>
 
 	* src/gnome-cmd-con-device.cc:
